--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -111,3 +111,9 @@ menuentry "System shutdown" --class shutdown --class poweroff {
     echo "System shutting down..."
     halt
 }
+menuentry "LUGOS Recovery Mode" --class recovery {
+    set gfxpayload=keep
+    linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisodevice=UUID=${ARCHISO_UUID} single cow_spacesize=4G copytoram=n driver=free nouveau.modeset=1 radeon.modeset=1 i915.modeset=1 nvme_load=yes
+    initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+}
+#ADDED RECOVERY MODE
