Added dynamic timeout

--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -1,3 +1,4 @@
+#CHANGES ARE APPENDED AT END
 # Load partition table and file system modules
 insmod part_gpt
 insmod part_msdos
@@ -117,3 +118,7 @@ menuentry "LUGOS Recovery Mode" --class recovery {
     initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 }
 #ADDED RECOVERY MODE
+if [ "${grub_platform}" == "efi" ]; then
+    set timeout=10
+fi
+#ADDED DNAMIC TIME OUT
