Added reflector for mirrorlist

--- a/pacman.conf
+++ b/pacman.conf
@@ -76,7 +76,8 @@ LocalFileSigLevel = Optional
 
 [core]
 Include = /etc/pacman.d/mirrorlist
-
+sudo reflector --country IN --age 12 --protocol https --sort rate --save /etc/pacman.d/mirrorlist
+#FOR FASTER MIRRORS
 #[extra-testing]
 #Include = /etc/pacman.d/mirrorlist
 
@@ -88,6 +89,7 @@ Include = /etc/pacman.d/mirrorlist
 
 #[multilib-testing]
 #Include = /etc/pacman.d/mirrorlist
+
 
 #[multilib]
 #Include = /etc/pacman.d/mirrorlist
