Added NoUpgrade and NoExtract

--- a/pacman.conf
+++ b/pacman.conf
@@ -90,6 +90,8 @@ Include = /etc/pacman.d/mirrorlist
 #[multilib-testing]
 #Include = /etc/pacman.d/mirrorlist
 
+NoUpgrade = package1 package2
+NoExtract = path1 path2
 
 #[multilib]
 #Include = /etc/pacman.d/mirrorlist
